[package]
name = "water-balance"
version = "2.0.0-rc4"
authors = ["spencerbh"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "A trait that supplies basic token logic concerning water quanitity for use in Substrate runtime"

[features]
default = ['std']
std = [
    'sp-std/std'
]

[package.metadata.substrate]
categories = [
	"trait",
	"water_balances",
	"balancey",
	"recipe",
]

[dependencies]
parity-scale-codec = { version = "1.3.0", features = ["derive"], default-features = false }
frame-support = { version = '2.0.0-rc4', default-features = false }
frame-system = { version = '2.0.0-rc4', default-features = false }
sp-runtime = { version = '2.0.0-rc4', default-features = false }
balances = { package = 'pallet-balances', version = '2.0.0-rc4', default-features = false }
sp-std = { version = '2.0.0-rc4', default-features = false }
sp-core = { version = '2.0.0-rc4', default-features = false }